--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,5 @@
 sonar.projectKey=NodeApp
+sonar.sources=.
+sonar.host.url=http://13.222.133.90:9000
+sonar.login=${SONAR_TOKEN}
 sonar.qualitygate.wait=true
