--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,39 +3,56 @@ stages:
   - sonar
   - docker
   - scan
-  - deploy
+  - deploy   # ajout stage deploy
 
 variables:
-  # Docker
   DOCKER_DRIVER: "overlay2"
   DOCKER_TLS_CERTDIR: ""
   GIT_COMMIT_SHORT: "$CI_COMMIT_SHORT_SHA"
 
   # SonarQube
-  SONAR_HOST_URL: "http://3.218.72.101:9000"
+  SONAR_HOST_URL: "http://13.222.133.90:9000"
   SONAR_PROJECT_KEY: "NodeApp"
+
+  # DockerHub
+  DOCKER_USER: "$DOCKER_USER"
+  DOCKER_PASS: "$DOCKER_PASS"
 
   # Nexus
   NEXUS_URL: "http://13.222.133.90:8081/repository/maven-snapshots/"
   NEXUS_USER: "$NEXUS_USER"
   NEXUS_PASS: "$NEXUS_PASS"
 
-# 1) Build (Node.js)
+###########################
+# 1) Install dependencies & test
+###########################
 build:
   stage: build
   image: node:22
   script:
-    - echo "📦 Installation des dépendances"
+    - echo "🛠️ Installation des dépendances..."
     - npm install
-    - echo "🧪 Lancement des tests (si présents)"
-    - npm test || echo "Aucun test défini"
+    - echo "🧪 Lancement des tests..."
+    - npm test || echo "⚠️ Aucun test défini"
+  artifacts:
+    paths:
+      - node_modules/
 
+###########################
 # 2) Analyse SonarQube
+###########################
 sonar:
   stage: sonar
   image:
     name: sonarsource/sonar-scanner-cli:11
     entrypoint: [""]
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
+    GIT_DEPTH: "0"
+  cache:
+    key: "sonar-cache-${CI_COMMIT_REF_SLUG}"
+    paths:
+      - .sonar/cache
   script:
     - echo "🔍 Analyse SonarQube"
     - >
@@ -45,9 +62,11 @@ sonar:
       -Dsonar.host.url=${SONAR_HOST_URL}
       -Dsonar.login=${SONAR_TOKEN}
       -Dsonar.qualitygate.wait=true
-  allow_failure: true
+  allow_failure: false
 
-# 3) Build & Push DockerHub
+###########################
+# 3) Docker Build & Push
+###########################
 docker:
   stage: docker
   image: docker:24
@@ -60,7 +79,9 @@ docker:
     - docker tag "$DOCKER_USER/nodeapp:$GIT_COMMIT_SHORT" "$DOCKER_USER/nodeapp:latest"
     - docker push "$DOCKER_USER/nodeapp:latest"
 
-# 4) Scan vulnérabilités avec Trivy
+###########################
+# 4) Trivy Scan
+###########################
 scan:
   stage: scan
   image: docker:24
@@ -74,21 +95,35 @@ scan:
         "$DOCKER_USER/nodeapp:$GIT_COMMIT_SHORT" || true
   allow_failure: true
 
-# 5) Déploiement du JAR vers Nexus
+###########################
+# 5) Déploiement artefact ZIP vers Nexus
+###########################
 deploy:
   stage: deploy
   image: maven:3.8.5-openjdk-17
   script:
-    - echo "📦 Déploiement du JAR vers Nexus"
-    - cat > settings.xml <<-EOF
-      <settings>
-        <servers>
-          <server>
-            <id>nexus</id>
-            <username>${NEXUS_USER}</username>
-            <password>${NEXUS_PASS}</password>
-          </server>
-        </servers>
-      </settings>
-    EOF
-    - mvn deploy -B -s settings.xml -DaltDeploymentRepository="nexus::default::${NEXUS_URL}"
+    - echo "📤 Création du package ZIP à déployer"
+    - zip -r nodeapp.zip .
+    - echo "📦 Déploiement vers Nexus"
+    - |
+      cat > settings.xml <<EOF
+<settings>
+  <servers>
+    <server>
+      <id>nexus</id>
+      <username>${NEXUS_USER}</username>
+      <password>${NEXUS_PASS}</password>
+    </server>
+  </servers>
+</settings>
+EOF
+    - mvn deploy:deploy-file \
+        -Durl=${NEXUS_URL} \
+        -DrepositoryId=nexus \
+        -Dfile=nodeapp.zip \
+        -DgroupId=com.nodeapp \
+        -DartifactId=nodeapp \
+        -Dversion=1.0.0-SNAPSHOT \
+        -Dpackaging=zip \
+        -s settings.xml
+    - rm -f settings.xml nodeapp.zip
