--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ stages:
   - sonar
   - docker
   - scan
-
+  - deploy   # ajout de la nouvelle étape
 
 variables:
   DOCKER_DRIVER: "overlay2"
@@ -18,6 +18,11 @@ variables:
   DOCKER_USER: "$DOCKER_USER"
   DOCKER_PASS: "$DOCKER_PASS"
 
+  # Nexus
+  NEXUS_URL: "http://13.222.133.90:8081/repository/maven-snapshots/"
+  NEXUS_USER: "$NEXUS_USER"
+  NEXUS_PASS: "$NEXUS_PASS"
+
 ###########################
 # 1) Install dependencies & test
 ###########################
@@ -29,8 +34,12 @@ build:
     - npm install
     - echo "🧪 Lancement des tests..."
     - npm test || echo "⚠️ Aucun test défini"
+    - echo "📦 Packaging de l'application..."
+    - mkdir -p dist
+    - zip -r dist/nodeapp.zip . -x "node_modules/*" ".git/*" "dist/*"
   artifacts:
     paths:
+      - dist/nodeapp.zip
       - node_modules/
 
 ###########################
@@ -89,3 +98,19 @@ scan:
         image --exit-code 1 --severity HIGH,CRITICAL \
         "$DOCKER_USER/nodeapp:$GIT_COMMIT_SHORT" || true
   allow_failure: true
+
+###########################
+# 5) Déploiement vers Nexus
+###########################
+deploy:
+  stage: deploy
+  image: curlimages/curl:latest
+  dependencies:
+    - build
+  script:
+    - echo "📦 Déploiement de l’artefact vers Nexus..."
+    - |
+      curl -v --fail --user "${NEXUS_USER}:${NEXUS_PASS}" --upload-file dist/nodeapp.zip \
+      "${NEXUS_URL}com/nodeapp/nodeapp/${CI_COMMIT_SHORT_SHA}/nodeapp-${CI_COMMIT_SHORT_SHA}.zip"
+  only:
+    - main
