--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,6 @@
-# Node build artifacts
-node_modules
-npm-debug.log
-
-# Local development
-*.env
-*.dev
-.DS_Store
-.idea
-
-# Docker
+.git
+.gitlab-ci.yml
+.dockerignore
+node_modules/
 Dockerfile
-docker-compose.yml
+*.md
